# trex

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
benches/: bench.rs
man/: trex.1
packaging/aur/: .SRCINFO  PKGBUILD
packaging/copr/: trex.spec
packaging/debian/: changelog  control  copyright  rules  trex.install
packaging/homebrew/: trex.rb
scripts/: update-formula.sh
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  model.rs  storage.rs  test_helpers.rs  tmux.rs
src/commands/: auto.rs  ignore.rs  list.rs  mod.rs  remove.rs  restore.rs  save.rs  status.rs  update.rs
tests/: auto_test.rs  ignore_test.rs  remove_test.rs  restore_test.rs  save_test.rs  session_test.rs  status_test.rs  update_test.rs
tests/common/: mod.rs
