[package]
name = "trex"
version = "0.6.1"
edition = "2021"
description = "Tmux Restore Extreme - persist and restore tmux sessions"
authors = ["Taha Sadough"]
license = "MIT"
repository = "https://github.com/tahasadough/trex"
rust-version = "1.75"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
ureq = "2"
tempfile = "3"


[dev-dependencies]
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 5 }

[lints.rust]
unused = "deny"
future_incompatible = "deny"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
